Implement controller
